--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -28,8 +28,8 @@
       <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef> 
+    <ng-container matColumnDef="select" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef class="last-column"> 
             <mat-form-field>
                 <mat-icon aria-hidden="false" aria-label="settings">settings</mat-icon>
                 <mat-select [formControl]="toppings" multiple>
@@ -37,7 +37,7 @@
                 </mat-select>
             </mat-form-field> 
         </th>
-        <td mat-cell *matCellDef="let element"> <mat-icon aria-hidden="false" aria-label="play_arrow">play_arrow</mat-icon> </td>
+        <td class="last-column" mat-cell *matCellDef="let element"> <mat-icon class="play-arrow" aria-hidden="false" aria-label="play_arrow">play_arrow</mat-icon> </td>
       </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
