--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,45 +1,51 @@
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-    </ng-container>
-  
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-    </ng-container>
+    <table mat-table
+            [dataSource]="dataSource" multiTemplateDataRows
+            class="mat-elevation-z8">
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="select" stickyEnd>
-        <th mat-header-cell *matHeaderCellDef class="last-column"> 
-            <mat-form-field>
-                <mat-icon aria-hidden="false" aria-label="settings">settings</mat-icon>
-                <mat-select [formControl]="toppings" multiple>
-                    <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-                </mat-select>
-            </mat-form-field> 
-        </th>
-        <td class="last-column" mat-cell *matCellDef="let element"> <mat-icon class="play-arrow" aria-hidden="false" aria-label="play_arrow">play_arrow</mat-icon> </td>
-      </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+        <div class="example-element-detail"
+                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-diagram">
+                <div class="example-element-position"> {{element.network_id}} </div>
+            </div>
+            <div class="example-element-description">
+                {{element.related_business}}
+                <span class="example-element-description-attribution"> -- Wikipedia </span>
+            </div>
+        </div>
+        </td>
+        </ng-container>
+
+        <ng-container matColumnDef="select" stickyEnd>
+            <th mat-header-cell *matHeaderCellDef class="last-column"> 
+                <mat-form-field>
+                    <mat-icon aria-hidden="false" aria-label="settings">settings</mat-icon>
+                    <mat-select [formControl]="columnsControl" multiple>
+                        <mat-option *ngFor="let column of allColumns" [value]="column">{{column}}</mat-option>
+                    </mat-select>
+                </mat-form-field> 
+            </th>
+            <td class="last-column" mat-cell *matCellDef="let element"> <mat-icon class="play-arrow" aria-hidden="false" aria-label="play_arrow">play_arrow</mat-icon> </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns;"
+        class="example-element-row"
+        [class.example-expanded-row]="expandedElement === element"
+        (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+</table>
+
+
+
+
+
