--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -3,13 +3,12 @@ table {
   }
 
   ::ng-deep{
-    .mat-select-value-text, .mat-select-arrow{
-        display: none;
-    }
+    .mat-form-field-infix {      
+      text-align: end;
+  }
 
-    div.mat-form-field-infix {
-        width: 24px;
-        display: flex;
+    .mat-select-arrow{      
+      display: none;
     }
     .mat-form-field-underline{
         display: none;
@@ -20,7 +19,7 @@ table {
     }
 
     .last-column{
-        text-align: end;
+        text-align: end;        
     }
 
     tr.example-detail-row {
